--- a/src/index.css
+++ b/src/index.css
@@ -1,2 +1,10 @@
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap");
 @import "tailwindcss";
 @plugin "daisyui";
+* {
+  font-family: "Work Sans", sans-serif;
+}
+
+.playfair-font {
+  font-family: "Playfair Display", serif;
+}
